# EasyRobotics

./: .gitignore  .gitmodules  README.md  pubspec.yaml
.github/workflows/: flutter.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/native_cpp/: NativeCppPlugin.kt
android/src/main/kotlin/com/weebee/native_cpp/: NativeCppPlugin.kt
cppRobotics/: CMakeLists.txt  cpp_robotics.def  format.sh  native_add.cpp  native_add.def  native_add.h
cppRobotics/src/: cpp_add.cpp  cpp_add.h  main.cpp  native_add.cpp  native_add.h
cppRobotics/src/filter/: FirstOrderFilter.h  FirstOrderFilterConfig.h  HighPassFilter.h  IFilter.h  LowPassFilter.h  LowPassFilterConfig.h
cppRobotics/src/guidance/: IGuidance.h  ProportionalNavigationConfig.h  PureProportionalNavigation.h  PureProportionalNavigationData.h  PureProportionalNavigationInputData.h
cppRobotics/test/: CMakeLists.txt
cppRobotics/test/filter/: gtest_FirstOrderFilter.cpp
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/native_add_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/lib/src/: app.dart  app_logo.dart  app_main.dart
example/lib/src/data/: cartesian_2d_data.dart  common_types.dart  filter_chart_data.dart
example/lib/src/layouts/: bottom_navigation.dart  tab_item.dart  tab_navigator.dart  tab_navigator_routes.dart
example/lib/src/pages/: home.dart  info.dart  maps.dart  method.dart  methods.dart
example/lib/src/pages/filter/: filter.dart  filter_item.dart  first_order_filter.dart  high_pass_filter.dart  low_pass_filter.dart
example/lib/src/pages/guidance/: guidance_item.dart  pure_proportional_navigation.dart
example/lib/src/widgets/: item_card.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: native_add.podspec  native_cpp.podspec
ios/Classes/: NativeCppPlugin.h  NativeCppPlugin.m  SwiftNativeCppPlugin.swift
lib/: cpp_add.dart  native_add.dart  native_cpp.dart  native_cpp_method_channel.dart  native_cpp_platform_interface.dart
lib/filter/: first_order_filter.dart  high_pass_filter.dart  low_pass_filter.dart
lib/guidance/: pure_proportional_navigation.dart
linux/: CMakeLists.txt  native_add_plugin.cc  native_cpp_plugin.cc
linux/include/native_cpp/: native_cpp_plugin.h
macos/: native_cpp.podspec
macos/Classes/: NativeCppPlugin.swift
test/: native_cpp_method_channel_test.dart  native_cpp_test.dart
windows/: CMakeLists.txt  native_add_plugin.cpp  native_add_plugin.h  native_add_plugin_c_api.cpp  native_cpp_plugin.cpp  native_cpp_plugin.h  native_cpp_plugin_c_api.cpp
windows/include/native_add/: native_add_plugin_c_api.h
windows/include/native_cpp/: native_cpp_plugin_c_api.h
